# DZ_NN

./: CMakeLists.txt  main.cpp
inc/: activate_func.hpp  back_propagation.hpp  network.hpp  neuron_layer.hpp
